[gd_scene load_steps=4 format=3 uid="uid://bau586mq8h0fo"]

[ext_resource type="Script" path="res://gui/main_menu/world_select/single_world_panel/single_world_panel.gd" id="1_n4bde"]

[sub_resource type="LabelSettings" id="LabelSettings_xcy7a"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_mmj40"]
font_size = 25

[node name="SingleWorldPanel" type="PanelContainer"]
offset_right = 438.0
offset_bottom = 208.0
script = ExtResource("1_n4bde")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BigLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ober Dunya"
label_settings = SubResource("LabelSettings_xcy7a")

[node name="SmallLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "12m"
label_settings = SubResource("LabelSettings_mmj40")

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "PLAY"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "INCINERATE"

[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
